# FNIRSI_1013D_Firmware

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
cmake/: GenerateVersion.cmake  arm-none-eabi.cmake  version.h.in
fnirsi_1013d_scope/: CMakeLists.txt  DS3231.c  DS3231.h  Makefile  ch340_class.c  ch340_class.h  commands.c  diskio.c  diskio.h  display_control.c  display_lib.c  display_lib.h  ff.c  ff.h  ffconf.h  fnirsi_1013d.ld  fnirsi_1013d_scope.c  fnirsi_1013d_scope.h  fpga_control.c  icons.c  mass_storage_class.c  menu.c  menu.h  ref_and_math.c  scope_functions.c  scope_functions.h  statemachine.c  statemachine.h  test.c  test.h  touchpanel.c  usb_cdc.c  usb_interface.c  usb_interface.h  variables.c  variables.h
fnirsi_1013d_scope/nbproject/: Makefile-Release.mk  configurations.xml
fnirsi_1013d_scope/nbproject/fft/: Makefile-Debug.mk  Makefile-Release.mk
fnirsi_1013d_sd_card_bootloader/: CMakeLists.txt  Makefile
fnirsi_1013d_sd_card_bootloader/nbproject/: Makefile-Release.mk
fnirsi_1013d_startup/: CMakeLists.txt  bl_variables.h  display_control.c  display_control.h  fnirsi_1013d_startup.c  fnirsi_sd_card_bootloader.ld  touchpanel.c
fnirsi_1013d_startup_from_sd_card/: CMakeLists.txt  Makefile  fnirsi_1013d.ld
fnirsi_1013d_startup_from_sd_card/nbproject/: Makefile-Release.mk
fnirsi_1013d_startup_screen/: CMakeLists.txt  Makefile  fnirsi_1013d.ld  fnirsi_1013d_startup_screen.c
fnirsi_1013d_startup_screen/nbproject/: Makefile-Release.mk
fnirsi_1014d_startup/: CMakeLists.txt  Makefile  bl_variables.c  bl_variables.h  display_control.c  fnirsi_1014d_startup.c  touchpanel.c
fnirsi_1014d_startup/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml
host_utils/: CMakeLists.txt
